fix nav overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ tr:nth-child(even) {
 }
 
 #the-sticky-div.sticky .lockednav-links li {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .line-clamp-3 {
